AM_CPPFLAGS = -I$(srcdir)/include
noinst_LTLIBRARIES = libb64.la
libb64_la_SOURCES = src/cdecode.c src/cencode.c
noinst_HEADERS = include/b64/ccommon.h include/b64/cdecode.h include/b64/cencode.h include/b64/decode.h include/b64/encode.h
EXTRA_DIST = \
	     AUTHORS.md \
	     BENCHMARKS.md \
	     CHANGELOG.md \
	     CMakeLists.txt \
	     INSTALL.md \
	     LICENSE.md \
	     README.md \
	     TODO.md \
	     base64 \
	     config.cmake.in \
	     examples \
	     src/CMakeLists.txt
